--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    [
+      "@babel/transform-runtime",
+      {
+        "helpers": true,
+        "regenerator": true
+      }
+    ]
+  ]
 }
